# CKAN-dataset-checker

./: .gitignore  README.md  check_hri_brokenlinks.py  check_hri_expired.py  pyproject.toml  requirements.txt  run.sh  run_hri_checks.py  sendmail.py  setup.cfg
