[tool.poetry]
name = "ckan-checker"
version = "0.1.0"
description = "Check links in CKAN packages"
authors = ["Ville Koivunen <ville.koivunen@hel.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
